Fix spacing for kbd and code & Add $block-margin variable

--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -77,6 +77,9 @@ $default-cursor: default !default;
 // Textarea resize
 $textarea-resize: vertical !default;
 
+// Spacing for block elements
+$block-margin: unitSize(3) !default;
+
 //
 // Grid
 // ----
